Fixed issue with overflow on mobile

--- a/components/Header/header.module.scss
+++ b/components/Header/header.module.scss
@@ -111,6 +111,8 @@
       display: none;
       @include respond(mobile-screen) {
         display: flex;
+        position: absolute;
+        right: 10px;
       }
     }
   }
